--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,14 @@ ehthumbs.db
 
 # TypeScript (if you're using it)
 *.tsbuildinfo
+
+# Ignore uploaded and sensitive files
+images/
+upload/
+credential/
+trained/ 
+
+# Optional: Ignore OS-specific or editor-specific files
+.DS_Store
+*.log
+.env
