--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
+    "docxtemplater": "^3.65.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "pdf-lib": "^1.17.1",
+    "pizzip": "^3.2.0",
     "sequelize": "^6.37.7",
     "sharp": "^0.34.2",
     "tesseract.js": "^6.0.1",
